<TableLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:stretchColumns="1">

    <TableRow>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:src="@drawable/ic_walmart"
            android:contentDescription="@string/logo"
            android:layout_marginTop="16dp"/>
    </TableRow>

    <TableRow>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/logo"
            android:layout_marginTop="16dp"
            android:text="@string/sign_in_to_your_account"
            android:textAlignment="center"
            android:textSize="28sp"
            android:textColor="@color/black"/>
    </TableRow>

    <LinearLayout
        android:orientation="vertical"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/logo"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="4dp"
            android:text="@string/email_address_required"
            android:textAlignment="textStart"
            android:textColor="@color/black"
            android:layout_marginStart="8dp"/>

        <EditText
            android:id="@+id/emailEt"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:autofillHints=""
            android:inputType="textEmailAddress"
            android:background="@drawable/edit_text_bg"/>
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/logo"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="4dp"
            android:text="@string/password_required"
            android:textAlignment="textStart"
            android:textColor="@color/black"
            android:layout_marginStart="8dp"/>

        <EditText
            android:id="@+id/passwordEt"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:autofillHints=""
            android:inputType="textPassword"
            android:background="@drawable/edit_text_bg"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/logo"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="4dp"
            android:text="@string/forget_password"
            android:layout_gravity="end"
            android:textColor="@color/black"
            android:layout_marginStart="8dp"/>
    </LinearLayout>

    <TableRow>
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/signInBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sign_in"
            android:layout_marginTop="40dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/btn_bg"/>
    </TableRow>

    <TableRow>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text=""
            android:layout_marginTop="40dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"/>
    </TableRow>
</TableLayout>